Rework delete partitions requests/actions
Replace usage of DeleteIndexRequest by introducing a
DeletePartitionsRequest and relevant Action/Executor

Relates: #17666